# product-query-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  example_request.sh  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: base.py  responder.py  retriever.py  router.py  workflow.py
app/models/: schemas.py
app/routers/: query.py
app/services/: vector_store_service.py
data/vector_store/: index.faiss  index.pkl
tests/: conftest.py  test_api.py  test_retrieval.py
